Adds marketplace UI
